Fix collapse

--- a/htdocs/content/themes/groupe-ct/assets/sass/elements/blocs/_bloc08.scss
+++ b/htdocs/content/themes/groupe-ct/assets/sass/elements/blocs/_bloc08.scss
@@ -121,6 +121,13 @@
 
     .two-col-icons-text-main-container {
       margin-top: 0;
+
+      &.default-padding {
+        padding: 0;
+        @media (min-width: $screen-xs-min) {
+          padding: 0 30px;
+        }
+      }
     }
 
     .two-col-icons-text-item {
